--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Rock Paper Scissors</title>
 </head>
-<body>
+<body id="body" class="bg-info text-center text-light">
+    <header>
+        <h1 class="bg-dark">Rock Paper Scissors Game</h1>
+    </header>
+    <div id="display"></div>
+    <div class="btn-group">
+    <button id="rock" class="btn btn-success">Rock</button>
+    <button id="paper" class="btn btn-warning">Paper</button>
+    <button id="scissors" class="btn btn-danger">Scissors</button>
+    </div>
+    <div id="score1" class="fs-4"></div>
+    <div id="score2" class="fs-4"></div>
     
 <script src="script.js"></script>
 </body>
